--- a/sass/layout/_explore.scss
+++ b/sass/layout/_explore.scss
@@ -1,4 +1,5 @@
 @use "../abstracts/variables";
+@use "../base/typography";
 @use '../abstracts/mixins';
 /* explore */
 .explore {
@@ -9,7 +10,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-family:"Roboto",sans-serif ;
+    font-family:typography.$font-roboto;
     
     & .explore__title {
         margin: 0;
@@ -35,6 +36,7 @@
         cursor: pointer;
         filter: brightness(115%);
         transition-duration: 1000ms;
+        // ajoute un shadow supplémentaire au bouton 
         @include mixins.bold-shadow;
     } 
 }
