--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,8 +15,8 @@
         margin: 24px 0 16px 0;
     }
     &__item {
-        list-style-type: none;
-         padding-bottom: 8px;
+        // list-style-type: none;
+        padding-bottom: 8px;
     }
     &__link {
         color: white;
