--- a/sass/layout/_loader.scss
+++ b/sass/layout/_loader.scss
@@ -12,7 +12,7 @@
     // raccourci pour indiquer le positionnement top:0 right:0 bottom:0 et left:0
     inset: 0;
     // faire passer l'élément au dessus de tous
-    z-index: 1000000;
+    z-index: 10000001;
     // appliquer une légère transparence sur l'élément
     opacity: 0.9;
     // durée de l'animation "disparition" 200ms et délai de 3 sec avant de démarrer
